feat: 초기 화면 수정

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   --text:rgba(255,255,255,.95);
   --muted:rgba(255,255,255,.6);
   --accent:#ff5f5f;
+  --green:#3ddc97;
+  --yellow:#f5c542;
 }
 
 body{
@@ -28,14 +30,14 @@ body{
   padding:14px;
 }
 
-/* 헤더 */
+/* ===== 헤더 ===== */
 header{
   position:sticky;
   top:0;
   background:rgba(11,18,32,.92);
   backdrop-filter:blur(10px);
   border-bottom:1px solid var(--border);
-  z-index:10;
+  z-index:20;
 }
 
 .header-inner{
@@ -59,7 +61,30 @@ select{
   font-size:12px;
 }
 
-/* 카드 공통 */
+/* ===== ON AIR ===== */
+.onair{
+  display:flex;
+  justify-content:center;
+  gap:10px;
+  font-size:12px;
+  padding:6px 14px;
+  border-bottom:1px solid var(--border);
+  background:#0c1528;
+}
+
+.onair span{
+  display:flex;
+  align-items:center;
+  gap:6px;
+  white-space:nowrap;
+}
+
+.onair .active{
+  color:var(--green);
+  font-weight:600;
+}
+
+/* ===== 카드 공통 ===== */
 .card{
   background:var(--card);
   border:1px solid var(--border);
@@ -67,29 +92,33 @@ select{
   padding:16px;
 }
 
-/* 사회 날씨 */
-.mood{
+/* ===== 사회 분위기 ===== */
+.mood-full{
   background:linear-gradient(135deg,#ff5f5f,#b83232);
   color:#fff;
 }
 
-.mood h2{
-  margin:0;
-  font-size:20px;
+.mood-mini{
+  position:sticky;
+  top:78px;
+  background:#1a2238;
+  z-index:10;
+  padding:10px 14px;
+  display:flex;
+  gap:12px;
+  font-size:12px;
 }
 
-.mood .date{
-  font-size:13px;
-  opacity:.85;
-  margin-top:4px;
+.mood-mini strong{
+  font-weight:600;
 }
 
 .score{
-  margin-top:16px;
+  margin-top:14px;
 }
 
 .score-item{
-  margin-bottom:12px;
+  margin-bottom:10px;
 }
 
 .score-label{
@@ -101,7 +130,6 @@ select{
   height:8px;
   background:rgba(255,255,255,.25);
   border-radius:999px;
-  overflow:hidden;
 }
 
 .bar span{
@@ -110,42 +138,43 @@ select{
   background:#fff;
 }
 
-/* 분석 */
+/* ===== 분석 ===== */
 .analysis{
+  background:rgba(255,255,255,.03);
+  border-left:3px solid var(--accent);
   margin-top:14px;
 }
 
 .analysis h3{
-  margin:0 0 8px;
-  font-size:16px;
+  margin:0 0 6px;
+  font-size:15px;
 }
 
 .analysis p{
-  margin:0;
-  font-size:14px;
-  line-height:1.6;
-  color:var(--muted);
-}
-
-/* 시간대 */
-.time-group{
-  margin-top:24px;
-}
-
-.time-title{
   font-size:13px;
   color:var(--muted);
-  margin-bottom:8px;
+  line-height:1.6;
 }
 
-/* 뉴스 카드 */
-.news-card{
-  padding:14px 0;
+/* ===== 시간대 ===== */
+.time-title{
+  position:sticky;
+  top:130px;
+  background:var(--bg);
+  font-size:12px;
+  color:var(--muted);
+  padding:6px 0;
+  z-index:5;
+}
+
+/* ===== 뉴스 ===== */
+.card + .card{
+  margin-top:12px;
 }
 
 .press{
-  font-size:13px;
-  color:#7db3ff;
+  font-size:12px;
+  opacity:.6;
   margin-bottom:4px;
 }
 
@@ -153,36 +182,33 @@ select{
   font-size:15px;
   font-weight:600;
   margin-bottom:6px;
-}
-
-/* 본문 (요약 + 상세 통합) */
-.content{
-  font-size:14px;
-  color:var(--muted);
-  line-height:1.5;
-
   display:-webkit-box;
   -webkit-line-clamp:2;
   -webkit-box-orient:vertical;
   overflow:hidden;
+}
 
-  transition:all .2s ease;
+.content{
+  font-size:14px;
+  color:var(--muted);
+  line-height:1.5;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
 }
 
 .news-card.open .content{
   -webkit-line-clamp:unset;
 }
 
-/* 액션 */
 .actions{
   display:flex;
   align-items:center;
-  gap:14px;
-  margin-top:12px;
-  padding-top:10px;
-  border-top:1px solid rgba(255,255,255,.05);
+  gap:12px;
   font-size:13px;
   color:var(--muted);
+  margin-top:10px;
 }
 
 .action{
@@ -192,19 +218,28 @@ select{
   cursor:pointer;
 }
 
+.action.share{
+  opacity:.85;
+}
+
+.action.share:hover{
+  color:var(--text);
+}
+
+
 .toggle{
   margin-left:auto;
-  font-size:16px;
-  padding:6px;
+  cursor:pointer;
 }
 
-/* 댓글 */
+/* ===== 댓글 ===== */
 .comments{
-  margin-top:14px;
+  display:none;
+  margin-top:12px;
 }
 
-.comments strong{
-  font-size:13px;
+.news-card.open .comments{
+  display:block;
 }
 
 .comment{
@@ -216,7 +251,6 @@ select{
 .comment-form{
   display:flex;
   gap:6px;
-  margin-top:8px;
 }
 
 .comment-form input{
@@ -226,16 +260,6 @@ select{
   border:1px solid var(--border);
   background:rgba(255,255,255,.05);
   color:var(--text);
-  font-size:13px;
-}
-
-.comment-form button{
-  padding:6px 10px;
-  border-radius:8px;
-  border:1px solid var(--border);
-  background:rgba(255,255,255,.08);
-  color:var(--text);
-  font-size:13px;
 }
 
 footer{
@@ -250,29 +274,23 @@ footer{
 <body>
 
 <header>
-  <div class="wrap header-inner">
+  <div class="header-inner wrap">
     <div class="brand">Shortify</div>
-    <select>
-      <option>최근 2시간</option>
-      <option>최근 4시간</option>
-      <option>오늘</option>
-    </select>
-    <select>
-      <option>전체 언론사</option>
-      <option>연합뉴스</option>
-      <option>뉴스1</option>
-      <option>중앙일보</option>
-      <option>조선비즈</option>
-    </select>
+    <select><option>최근 2시간</option></select>
+    <select><option>전체 언론사</option></select>
+  </div>
+
+  <div class="onair">
+    <span class="active">● 기사 수집중</span>
+    <span>● AI 요약중</span>
+    <span>● 기사 배포</span>
   </div>
 </header>
 
 <main class="wrap">
 
-  <section class="card mood">
+  <section class="card mood-full">
     <h2>2025-12-24</h2>
-    <div class="date">오늘의 사회 분위기 지수</div>
-
     <div class="score">
       <div class="score-item">
         <div class="score-label">긴장도 · 90</div>
@@ -289,160 +307,69 @@ footer{
     </div>
   </section>
 
+  <section class="card mood-mini">
+    <strong>긴장 90</strong>
+    <strong>긍정 25</strong>
+    <strong>안정 15</strong>
+  </section>
+
   <section class="card analysis">
     <h3>오늘의 사회 분위기 분석</h3>
-    <p>
-      정치권 사법 이슈와 환율 급등에 따른 정부 대응이 동시에 보도되며
-      전반적으로 긴장도는 높고 안정성은 낮은 흐름이 이어지고 있다.
-    </p>
+    <p>정치·환율 이슈가 동시에 보도되며 긴장도는 높고 안정성은 낮은 흐름.</p>
   </section>
 
-  <section class="time-group">
-    <div class="time-title">02:00 – 02:59</div>
+  <div class="time-title">02:00 – 02:59</div>
 
-    <div class="card">
-      <div class="news-card">
-        <div class="press">뉴스1</div>
-        <div class="title">달러 유입 빗장 푼다…외환 규제 완화</div>
+  <div class="card">
+    <div class="news-card">
+      <div class="press">뉴스1</div>
+      <div class="title">달러 유입 빗장 푼다…외환 규제 완화</div>
+      <div class="content">
+        정부는 환율 급등을 구조적 문제로 보고 외환 규제 완화를 발표했다.
+      </div>
+      <div class="actions">
+        <div class="action">❤️ 12</div>
+        <div class="action">💬 3</div>
+        <div class="action share" onclick="shareArticle()">🔗 공유</div>
+        <div class="toggle" onclick="toggleDetail(this)">자세히 ▾</div>
+      </div>
 
-        <div class="content">
-          정부는 최근 환율 급등의 원인을 구조적인 외화 수급 불균형으로 판단하고,
-          외국계 은행 선물환 포지션 한도 확대 등 외환건전성 제도 조정을 발표했다.
-          이에 따라 은행권 달러 공급 여력이 확대되고 수출기업의 외화 조달 부담이
-          완화될 것으로 기대된다는 평가가 나온다.
-        </div>
 
-        <div class="actions">
-          <div class="action">❤️ 12</div>
-          <div class="action">🔗 공유</div>
-          <div class="action">💬 3</div>
-          <div class="action toggle" onclick="toggleDetail(this)">⌄</div>
-        </div>
-
-        <div class="comments">
-          <strong>댓글</strong>
-          <div class="comment">익명: 환율 진짜 심각하다</div>
-          <div class="comment">익명: 단기 처방 같음</div>
-
-          <div class="comment-form">
-            <input placeholder="익명으로 댓글 작성">
-            <button>등록</button>
-          </div>
+      <div class="comments">
+        <div class="comment">익명: 환율 심각</div>
+        <div class="comment-form">
+          <input placeholder="익명 댓글">
         </div>
       </div>
     </div>
-    <br>
-    <div class="card">
-      <div class="news-card">
-        <div class="press">뉴스1</div>
-        <div class="title">달러 유입 빗장 푼다…외환 규제 완화</div>
+  </div>
 
-        <div class="content">
-          정부는 최근 환율 급등의 원인을 구조적인 외화 수급 불균형으로 판단하고,
-          외국계 은행 선물환 포지션 한도 확대 등 외환건전성 제도 조정을 발표했다.
-          이에 따라 은행권 달러 공급 여력이 확대되고 수출기업의 외화 조달 부담이
-          완화될 것으로 기대된다는 평가가 나온다.
-        </div>
-
-        <div class="actions">
-          <div class="action">❤️ 12</div>
-          <div class="action">🔗 공유</div>
-          <div class="action">💬 3</div>
-          <div class="action toggle" onclick="toggleDetail(this)">⌄</div>
-        </div>
-
-        <div class="comments">
-          <strong>댓글</strong>
-          <div class="comment">익명: 환율 진짜 심각하다</div>
-          <div class="comment">익명: 단기 처방 같음</div>
-
-          <div class="comment-form">
-            <input placeholder="익명으로 댓글 작성">
-            <button>등록</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="time-group">
-    <div class="time-title">01:00 – 01:59</div>
-
-    <div class="card">
-      <div class="news-card">
-        <div class="press">뉴스1</div>
-        <div class="title">달러 유입 빗장 푼다…외환 규제 완화</div>
-
-        <div class="content">
-          정부는 최근 환율 급등의 원인을 구조적인 외화 수급 불균형으로 판단하고,
-          외국계 은행 선물환 포지션 한도 확대 등 외환건전성 제도 조정을 발표했다.
-          이에 따라 은행권 달러 공급 여력이 확대되고 수출기업의 외화 조달 부담이
-          완화될 것으로 기대된다는 평가가 나온다.
-        </div>
-
-        <div class="actions">
-          <div class="action">❤️ 12</div>
-          <div class="action">🔗 공유</div>
-          <div class="action">💬 3</div>
-          <div class="action toggle" onclick="toggleDetail(this)">⌄</div>
-        </div>
-
-        <div class="comments">
-          <strong>댓글</strong>
-          <div class="comment">익명: 환율 진짜 심각하다</div>
-          <div class="comment">익명: 단기 처방 같음</div>
-
-          <div class="comment-form">
-            <input placeholder="익명으로 댓글 작성">
-            <button>등록</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br>
-    <div class="card">
-      <div class="news-card">
-        <div class="press">뉴스1</div>
-        <div class="title">달러 유입 빗장 푼다…외환 규제 완화</div>
-
-        <div class="content">
-          정부는 최근 환율 급등의 원인을 구조적인 외화 수급 불균형으로 판단하고,
-          외국계 은행 선물환 포지션 한도 확대 등 외환건전성 제도 조정을 발표했다.
-          이에 따라 은행권 달러 공급 여력이 확대되고 수출기업의 외화 조달 부담이
-          완화될 것으로 기대된다는 평가가 나온다.
-        </div>
-
-        <div class="actions">
-          <div class="action">❤️ 12</div>
-          <div class="action">🔗 공유</div>
-          <div class="action">💬 3</div>
-          <div class="action toggle" onclick="toggleDetail(this)">⌄</div>
-        </div>
-
-        <div class="comments">
-          <strong>댓글</strong>
-          <div class="comment">익명: 환율 진짜 심각하다</div>
-          <div class="comment">익명: 단기 처방 같음</div>
-
-          <div class="comment-form">
-            <input placeholder="익명으로 댓글 작성">
-            <button>등록</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
   <footer>
-    실시간 수집된 기사 원문을 기반으로 요약된 정보입니다.
+    © 2025 jade · Shortify<br>
+    실시간 수집 기사 기반 AI 요약 서비스
   </footer>
+
 
 </main>
 
 <script>
 function toggleDetail(el){
   const card = el.closest('.news-card');
-  const open = card.classList.toggle('open');
-  el.textContent = open ? '⌃' : '⌄';
+  card.classList.toggle('open');
+  el.textContent = card.classList.contains('open') ? '닫기 ▴' : '자세히 ▾';
+}
+</script>
+<script>
+function shareArticle(){
+  if(navigator.share){
+    navigator.share({
+      title: 'Shortify 기사 요약',
+      text: '지금 이 뉴스 요약 확인해보세요',
+      url: location.href
+    });
+  }else{
+    alert('공유 기능을 지원하지 않는 환경입니다.');
+  }
 }
 </script>
 
